# PACE_OCI_unified_aerosol_retrieval_algorithm

./: .gitignore  CMakeLists.txt  CMakeLists_bsl.txt  CMakeLists_nc4.txt  PACE_L2.cdl  README.md  db_luts_home.par  dt_luts_home.par  uaa_db_home.par  uaa_home.par  uaa_lite.par  uv_luts_home.par
DB_DT_Land/: uaa_lite.par
DT_Common_src/: uaa_lite.par
ML_UVAOD/: read_nc_landonly.py  read_nc_landonly_new.py
Main/: Merge_land_ocean_Module.f90  NUV_ACAerosolModule.f90  OCIUAAER.f90  OCIUAAER_Config_Module.f90  OCIUAAER_L1BModule.f90  Proxydata_L1BModule.f90
Write_L2_data/: uaa_lite.par
cmake/: CMakeCache.txt
inc/: output_Variables_proxy.inc  sfc21tbl90.inc  writeDataset_REAL_template.inc
include/: H5write_INT_template.inc  Save_data_declare.inc  Set_Array_dimension.inc  Set_Array_dimension_Land.inc  Set_Array_dimension_UV.inc  aottbl.inc  common_l1b_var.inc  contrl.inc  mod04.inc  newaottbl.inc  newaottbl90.inc  output_Variables.inc  output_Variables_proxy.inc  output_Variables_synth.inc  readDataset_template.inc  read_Sat_MODIS_proxy.inc  refl.inc  sample.inc  sfc21tbl.inc  table.inc  writeAttribute_template.inc  writeDataset_template.inc
pex/: .gitignore  CMakeLists.txt  README.md  odps_requirements.txt
pex/uaa_ml/: CMakeLists.txt  requirements.txt  setup.py.in
python/: afrt.py  files2nc.py
run/: DB_PACE.config  File_list.txt  GMAO_basename  Interm_L2.cdl  Interm_file.nc  OCIUAAER_Config  OCIUAAER_Config_main  PACE_L2.cdl  PACE_L2_1KM.cdl  Testing_File_list.txt  ancillary_time_2GMAO.py  ancillary_time_GOESIT.py  cdate  db_config.sh  file_list  (+9 more)
(+187 files in other folders)
